<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.lodder.subtools</groupId>
	<artifactId>subtools</artifactId>
	<version>1.5.1-SNAPSHOT</version>
	<name>SubTools</name>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<scm>
		<connection>scm:git:git@github.com:phdelodder/SubTools.git</connection>
		<url>scm:git:git@github.com:phdelodder/SubTools.git</url>
		<developerConnection>scm:git:git@github.com:phdelodder/SubTools.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<modules>
		<module>SubLibrary</module>
		<module>MultiSubDownloader</module>
		<module>SubSort</module>
	</modules>

	<issueManagement>
		<system>github</system>
		<url>https://github.com/phdelodder/SubTools/issues</url>
	</issueManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>16</source>
						<target>16</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.1</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>3.0.1</version>
					<configuration>
						<effort>Max</effort>
						<threshold>Medium</threshold>
						<xmlOutput>true</xmlOutput>
						<excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.5.8.201207111220</version>
					<executions>
						<execution>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>report</id>
							<phase>test</phase>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.lodder.subtools</groupId>
				<artifactId>multisubdownloader</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.lodder.subtools</groupId>
				<artifactId>sublibrary</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-cli</groupId>
				<artifactId>commons-cli</artifactId>
				<version>1.5.0</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.24</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.1.2</version>
			</dependency>
			<dependency>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-core</artifactId>
				<version>6.0.1</version>
			</dependency>
			<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>javax.annotation-api</artifactId>
				<version>1.3.2</version>
			</dependency>
			<dependency>
				<groupId>io.swagger</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>1.6.6</version>
			</dependency>
			<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>logging-interceptor</artifactId>
				<version>4.10.0</version>
			</dependency>
			<dependency>
				<groupId>io.gsonfire</groupId>
				<artifactId>gson-fire</artifactId>
				<version>1.8.5</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.13.3</version>
			</dependency>
			<dependency>
				<groupId>com.pivovarit</groupId>
				<artifactId>throwing-function</artifactId>
				<version>1.5.1</version>
			</dependency>
			<dependency>
				<groupId>name.falgout.jeffrey</groupId>
				<artifactId>throwing-interfaces</artifactId>
				<version>1.2.0</version>
			</dependency>
			<dependency>
				<groupId>com.optimaize.languagedetector</groupId>
				<artifactId>language-detector</artifactId>
				<version>0.6</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.12.0</version>
			</dependency>
			<dependency>
				<groupId>org.jsoup</groupId>
				<artifactId>jsoup</artifactId>
				<version>1.15.3</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlrpc</groupId>
				<artifactId>xmlrpc-client</artifactId>
				<version>3.1.3</version>
				<exclusions>
					<exclusion>
						<groupId>xml-apis</groupId>
						<artifactId>xml-apis</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.dropbox.core</groupId>
				<artifactId>dropbox-core-sdk</artifactId>
				<version>2.0.6</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.11.0</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.2</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>4.7.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.github.mkolisnyk</groupId>
				<artifactId>generex</artifactId>
				<version>0.0.2</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>4.4</version>
			</dependency>
			<dependency>
				<groupId>org.hsqldb</groupId>
				<artifactId>hsqldb</artifactId>
				<version>2.3.2</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
			</dependency>
			<dependency>
				<groupId>javax.ws.rs</groupId>
				<artifactId>javax.ws.rs-api</artifactId>
				<version>2.1.1</version>
			</dependency>
			<dependency>
				<groupId>com.uwetrottmann.thetvdb-java</groupId>
				<artifactId>thetvdb-java</artifactId>
				<version>2.4.0</version>
			</dependency>
			<dependency>
				<groupId>com.mashape.unirest</groupId>
				<artifactId>unirest-java</artifactId>
				<version>1.4.9</version>
			</dependency>
			<dependency>
				<groupId>com.miglayout</groupId>
				<artifactId>miglayout-swing</artifactId>
				<version>4.2</version>
			</dependency>
			<dependency>
				<groupId>org.reflections</groupId>
				<artifactId>reflections</artifactId>
				<version>0.10.2</version>
			</dependency>
			<dependency>
				<groupId>com.massisframework</groupId>
				<artifactId>j-text-utils</artifactId>
				<version>0.3.4</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>1.9</version>
			</dependency>
			<dependency>
				<groupId>org.openapitools</groupId>
				<artifactId>jackson-databind-nullable</artifactId>
				<version>0.2.3</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.plexus</groupId>
				<artifactId>plexus-interactivity-api</artifactId>
				<version>1.1</version>
			</dependency>
			<dependency>
				<groupId>org.json</groupId>
				<artifactId>json</artifactId>
				<version>20220924</version>
			</dependency>
			<dependency>
				<groupId>net.jodah</groupId>
				<artifactId>typetools</artifactId>
				<version>0.6.3</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>